--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-	base = "app/"
-	publish = "app/build/"
-	functions = "functions/"
+	base = ""
+	publish = "build"
+	functions = "functions"
